feat auth project

--- a/audit-javers/src/main/resources/application.yml
+++ b/audit-javers/src/main/resources/application.yml
@@ -17,3 +17,8 @@ spring:
     console:
       enabled: true
       path: /h2-ui
+
+expert:
+  app:
+    jwtSecret: expertClubSecretKey
+    jwtExpirationMs: 86400000
