--- a/audit-envers/src/main/resources/application.yml
+++ b/audit-envers/src/main/resources/application.yml
@@ -18,4 +18,7 @@ spring:
       enabled: true
       path: /h2-ui
 
-
+expert:
+  app:
+    jwtSecret: expertClubSecretKey
+    jwtExpirationMs: 86400000
