--- a/audit-envers/src/main/resources/application.yml
+++ b/audit-envers/src/main/resources/application.yml
@@ -2,22 +2,19 @@ server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:h2:mem:enversDB
-    driverClassName: org.h2.Driver
-    username: sa
-    password: sa123
+    url: jdbc:postgresql://localhost:5432/envers
+    driverClassName: org.postgresql.Driver
+    username: postgres
+    password: mysecretpassword
+    testWhileIdle: true
+    validationQuery: SELECT 1
   jpa:
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
-  h2:
-    console:
-      enabled: true
-      path: /h2-ui
-
 expert:
   app:
     jwtSecret: expertClubSecretKey
