--- a/audit-envers/pom.xml
+++ b/audit-envers/pom.xml
@@ -15,6 +15,7 @@
 	<description>Test how envers work</description>
 	<properties>
 		<java.version>11</java.version>
+		<hibernate.version>5.6.3.Final</hibernate.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -41,15 +42,13 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
 		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt</artifactId>
-			<version>0.9.1</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-envers</artifactId>
+			<version>${hibernate.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
